Fixed overflow-y bug on smaller screens and Added Drop Shadow Filters

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #f5f5f5;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .flex-grid {
@@ -42,6 +43,7 @@ body {
     justify-content: right;
     text-align: center;
     grid-area: bitmoji;
+    filter: drop-shadow(1px 2px 3px black);
 }
 
 .bio {
@@ -92,7 +94,7 @@ body {
 }
 
 .social-links a:hover {
-    color: rgba(0, 0, 0, 0.55);
+    filter: drop-shadow(1px 1px 1px #3ddc84);
 }
 
 .projects-grid {
